recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:6: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:10: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:14: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:18: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:22: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:26: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^