recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (levels < 1 ){
    return 
  }
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
  avance(length)
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
  droite(360/sides)
  
}